- Merge event_handling branch and configuration changes.

--- a/conf/py-asterisk.conf.sample
+++ b/conf/py-asterisk.conf.sample
@@ -4,7 +4,11 @@
 ; py-Asterisk sample configuration file.
 
 
-[pbx-connection]
+[py-asterisk]
+default connection=my-pbx
+
+
+[connection: my-pbx]
 hostname=pbx.lan.yourcompany.net
 port=5038
 username=admin
